# LLM-OS

./: Cargo.toml  README.md
.github/workflows/: ci.yml
config/: llmos.toml  memory-profiles.toml  policy.example.yaml
contracts/proto/controlplane/v1/: llmos.proto
core/identity/: README.md
core/kernel-profile/: README.md
core/policy-engine/: README.md
core/secrets/: README.md
core/service-bus/: README.md
crates/benchmark-ingest/: Cargo.toml
crates/benchmark-ingest/src/: lib.rs  parser.rs  query.rs  record.rs  tests.rs
crates/common-types/: Cargo.toml
crates/common-types/src/: lib.rs
crates/controlplane-api/: Cargo.toml  build.rs
crates/controlplane-api/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: hmac.rs  lib.rs  tests.rs  token.rs  verifier.rs  workload.rs
crates/kernel-profile/: Cargo.toml
crates/kernel-profile/src/: lib.rs  loader.rs  model.rs  resolver.rs  tests.rs
crates/model-runtime/: Cargo.toml
crates/model-runtime/src/: backend.rs  config.rs  lib.rs  llama.rs  request.rs  tests.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: apparmor.rs  capability.rs  lib.rs  namespace.rs  seccomp.rs  tests.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs  provider.rs  store.rs  tests.rs
crates/service-bus/: Cargo.toml
crates/service-bus/src/: channel.rs  lib.rs  message.rs  tests.rs  transport.rs
docs/: architecture.md  modules.md
observability/metrics/: README.md
ops/: README.md  alerts.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml
ops/grafana/provisioning/dashboards/: dashboards.yml
runtime/mcp-runtime/: README.md
runtime/memory-manager/: README.md
runtime/memory-manager/profiles/: default-compression-policy.json
runtime/model-runtime/: README.md
scripts/memory/: apply-zram-profile.sh  benchmark.sh  benchmark_plan.csv  real-benchmark.ps1  run-benchmark-plan.ps1  sample-benchmark.ps1  summarize-benchmark-plan.ps1  validate-benchmark-plan.ps1
sdk/plugin-api/: manifest.schema.json
sdk/plugin-api/manifests/: README.md  mock.mcp.echo.json
security/audit/: README.md
security/sandbox/: README.md
services/llmd/: Cargo.toml
services/llmd/src/: bus.rs  config.rs  executor.rs  lib.rs  main.rs  secrets.rs
services/llmd/tests/: e2e_pipeline.rs  grpc_policy_integration.rs
services/mcp-runtime/: Cargo.toml
services/mcp-runtime/src/: lib.rs  main.rs  sandbox.rs
services/mcp-runtime/tests/: lifecycle_integration.rs
services/mock-mcp-plugin/: Cargo.toml
services/mock-mcp-plugin/src/: main.rs
services/policy-engine/: Cargo.toml
services/policy-engine/src/: engine.rs  grpc.rs  identity.rs  lib.rs  loader.rs  main.rs  metrics.rs  model.rs  reload.rs
tools/llmos-cli/: Cargo.toml
tools/llmos-cli/src/: benchmark.rs  main.rs  modules.rs  output.rs  policy.rs  profile.rs
tools/llmos-cli/tests/: json_commands_contract.rs  modules_json_contract.rs  policy_json_contract.rs
