[workspace]
members = [
  "crates/controlplane-api",
  "crates/common-types",
  "crates/secrets",
  "crates/identity",
  "crates/service-bus",
  "crates/kernel-profile",
  "crates/sandbox",
  "services/llmd",
  "services/mcp-runtime",
  "services/mock-mcp-plugin",
  "services/policy-engine",
  "tools/llmos-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tonic-build = "0.11"
async-trait = "0.1"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
