[package]
name = "llmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
common-types = { path = "../../crates/common-types" }
policy-engine = { path = "../policy-engine" }
