[package]
name = "llmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
llama-cpp = ["llmos-model-runtime/llama-cpp"]
cuda = ["llmos-model-runtime/cuda"]
metal = ["llmos-model-runtime/metal"]
vulkan = ["llmos-model-runtime/vulkan"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
common-types = { path = "../../crates/common-types" }
controlplane-api = { path = "../../crates/controlplane-api" }
llmos-secrets = { path = "../../crates/secrets" }
llmos-model-runtime = { path = "../../crates/model-runtime" }
llmos-service-bus = { path = "../../crates/service-bus" }
tonic.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
hyper.workspace = true

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
policy-engine = { path = "../policy-engine" }
