[package]
name = "mcp-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "process", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
