[package]
name = "policy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml = "0.9"
tonic.workspace = true
controlplane-api = { path = "../../crates/controlplane-api" }
