[package]
name = "llmos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
common-types = { path = "../../crates/common-types" }
controlplane-api = { path = "../../crates/controlplane-api" }
mcp-runtime = { path = "../../services/mcp-runtime" }
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
